--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,13 +4,12 @@ Size=400,400
 Collapsed=0
 
 [Window][Test]
-ViewportPos=296,412
-ViewportId=0x784DD132
+Pos=60,60
 Size=92,48
 Collapsed=0
 
 [Window][ImGui Demo]
-ViewportPos=-38,293
+ViewportPos=939,369
 ViewportId=0x080FC883
 Size=550,680
 Collapsed=0
